--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,13 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>imagem aqui</h1>
-        <ul>
-            <li>criciuma</li>
-            <li>jogador</li>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="download__2_-removebg-preview.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">noticias</li>
+            <li class="cabecalho-lista-item">loja oficial</li>
         </ul>
     </header>
-    
+
+
+    <section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre o time</h2>
+            <p class="escola-texto-um">Foi fundado em 13 de maio de 1947, com o nome de Comerciário Esporte Clube. Em 2024, disputará a Série A do Campeonato Brasileiro.</p>
+            <p class="escola-texto-dois">O Criciúma foi o primeiro e único clube de Santa Catarina a conquistar o título da Copa do Brasil, em 1991, de forma invicta.
+            </p>
+        </div>
+        <img class="escola-imagem" src="download (19).jpeg" alt="Professora no quadro">
+    </section>
 </body>
+
 </html>
