--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    .cagliostro-regular {
+        font-family: "Cagliostro", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
 </head>
 <body>
     <header class="cabecalho">
